# concerto

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE.md  concerto.example.toml
.github/workflows/: ci.yml  docker-logs.yml  docker.yml  release.yml
crates/concerto-api/: Cargo.toml
crates/concerto-api/src/: app.rs  error.rs  health_loop.rs  lib.rs  metrics.rs  middleware.rs  orchestrator.rs  server.rs  shutdown.rs  state_file.rs  types.rs
crates/concerto-api/src/routes/: chat.rs  health.rs  metrics.rs  mod.rs  models.rs  status.rs
crates/concerto-backend/: Cargo.toml
crates/concerto-backend/src/: lib.rs  manager.rs  mock.rs  port_alloc.rs  process.rs
crates/concerto-backend/tests/: command_builder.rs  mock_manager.rs  port_alloc.rs
crates/concerto-cli/: Cargo.toml
crates/concerto-cli/src/: cli.rs  main.rs  reconcile.rs  setup.rs  signals.rs
crates/concerto-config/: Cargo.toml
crates/concerto-config/src/: config.rs  error.rs  gpus.rs  lib.rs  models.rs  routing.rs  server.rs
crates/concerto-config/tests/: parse_config.rs
crates/concerto-core/: Cargo.toml
crates/concerto-core/src/: eviction.rs  lib.rs  routing.rs  state.rs  types.rs
crates/concerto-core/tests/: routing_proptest.rs
crates/concerto-gpu/: Cargo.toml
crates/concerto-gpu/src/: health.rs  lib.rs  mock.rs  monitor.rs  nvml.rs
crates/concerto-gpu/tests/: mock_monitor.rs
docs/: architecture.md  benchmarks.md  deployment.md  quickstart.md  troubleshooting.md
tests/mock_backend/: Cargo.toml
tests/mock_backend/src/: lib.rs  main.rs  responses.rs  server.rs
tests/mock_backend/tests/: integration.rs
tests/scenarios/: Cargo.toml
tests/scenarios/src/: lib.rs
tests/scenarios/tests/: all_gpus_unhealthy_rejects.rs  backend_crash_recovery.rs  cached_request.rs  cold_start_single_request.rs  concurrent_cold_start_dedup.rs  concurrent_different_models.rs  graceful_shutdown_drain.rs  lru_eviction.rs  metrics_endpoint.rs  request_timeout.rs  streaming_response.rs
tools/bench/: README.md  pyproject.toml  remote.sh
tools/bench/fixtures/: weight-checksums.json
tools/bench/scenarios/: smoke-quick.yaml  sprint-2-validation.yaml
tools/bench/src/concerto_bench/: __init__.py  __main__.py  artifact.py  cli.py  concerto_proc.py  config.py  runner.py  schema.py
tools/bench/src/concerto_bench/analyze/: __init__.py  diff.py  summarize.py
tools/bench/src/concerto_bench/primitives/: __init__.py  assertions.py  kill.py  parallel.py  request.py  snapshot.py  wait.py  wait_for.py  wrk_load.py
tools/bench/src/concerto_bench/samplers/: __init__.py  base.py  concerto_metrics.py  concerto_status.py  nvidia_smi.py  pgrep_counter.py  proc_stats.py
tools/bench/tests/: test_artifact.py  test_assertions_primitive.py  test_cli_smoke.py  test_concerto_metrics_sampler.py  test_concerto_proc.py  test_concerto_status_sampler.py  test_dry_run_end_to_end.py  test_kill_primitive.py  test_nvidia_smi_sampler.py  test_parallel_primitive.py  test_pgrep_counter_sampler.py  test_proc_stats_sampler.py  test_request_primitive.py  test_runner.py  test_sampler_base.py  test_schema.py  test_snapshot_primitive.py  test_summarize.py  test_wait_for_primitive.py  test_wait_primitive.py  test_wrk_load_primitive.py
