[workspace]
resolver = "2"
members = [
    "crates/concerto-core",
    "crates/concerto-gpu",
    "crates/concerto-backend",
    "crates/concerto-api",
    "crates/concerto-config",
    "crates/concerto-cli",
    "tests/mock_backend",
    "tests/scenarios",
]

[workspace.package]
version = "0.2.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thomphil/concerto"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime & HTTP
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# GPU monitoring
nvml-wrapper = "0.10"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytesize = { version = "2", features = ["serde"] }
dashmap = "6"
async-trait = "0.1"
# POSIX process-group management (setsid / killpg). Unix-only.
nix = { version = "0.29", features = ["signal", "process"] }

# Testing
proptest = "1"

# Internal crates. Path deps must also carry a `version` for `cargo publish`
# to rewrite them to registry deps; the version is set on the release
# branch (where workspace.version is the actual release version) so that
# the SemVer constraint matches what's about to be published. Leaving it
# off here on `main` (which sits at `0.2.0-dev`) keeps the workspace
# resolvable while we develop.
concerto-core = { path = "crates/concerto-core" }
concerto-gpu = { path = "crates/concerto-gpu" }
concerto-backend = { path = "crates/concerto-backend" }
concerto-api = { path = "crates/concerto-api" }
concerto-config = { path = "crates/concerto-config" }
