[package]
name = "concerto-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP API and orchestrator state machine for Concerto: routes, request lifecycle, cold-start dedup, eviction, and graceful shutdown."

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tempfile = "3"
chrono = { workspace = true }
bytesize = { workspace = true }
futures = "0.3"
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
concerto-core = { workspace = true }
concerto-config = { workspace = true }
concerto-gpu = { workspace = true }
concerto-backend = { workspace = true }
