[package]
name = "concerto-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "concerto"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bytesize = { workspace = true }
concerto-api = { workspace = true }
concerto-config = { workspace = true }
concerto-core = { workspace = true }
concerto-gpu = { workspace = true }
concerto-backend = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
tempfile = "3"

[features]
# Enable real NVML-backed GPU telemetry. Forwards to `concerto-gpu/nvml`,
# which itself gates its NVML bindings on `target_os = "linux"` — so
# cross-platform builds still compile with this feature enabled; it just
# becomes a no-op off Linux.
nvml = ["concerto-gpu/nvml"]
