[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "concerto-bench"
version = "0.1.0.dev0"
description = "Benchmark and validation rig for the Concerto inference multiplexer."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "Concerto contributors" },
]
keywords = ["concerto", "benchmark", "inference", "llm", "vllm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Benchmark",
    "Topic :: Scientific/Engineering",
    "Private :: Do Not Upload",
]

# The dependency set is the full set locked in SPRINT-2-PLAN §3. Even
# though Phase B.1 only exercises typer + pydantic, we pin the whole
# graph up front so subsequent B.n steps don't have to relitigate
# versions or thrash `pip install -e .` between sessions.
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "prometheus-client>=0.20",
    "structlog>=24.1",
    "rich>=13.7",
    "jsonlines>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
concerto-bench = "concerto_bench.cli:app"

[project.urls]
Homepage = "https://github.com/thomphil/concerto"
Repository = "https://github.com/thomphil/concerto"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
